--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,3 +1,48 @@
-.container {
-  background-color: aqua;
+.imgContainer {
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+
+.img {
+  object-fit: cover;
+  filter: grayscale(100%);
+}
+
+.imgText {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  background-color: #53c28b;
+  padding: 5px;
+  color: white;
+}
+
+.textContainer {
+  display: flex;
+  gap: 100px;
+}
+
+.item {
+  flex: 1;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.item > p {
+  font-size: 18px;
+  font-weight: 300;
+  text-align: justify;
+}
+
+.button {
+  padding: 20px;
+  cursor: pointer;
+  background-color: #53c28b;
+  border: none;
+  border-radius: 5px;
+  width: max-content;
+  color: white;
 }
